--- a/notebooks/agent.ipynb
+++ b/notebooks/agent.ipynb
@@ -38,11 +38,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "api_base=None\n",
+    "\n",
     "# model_id=\"ollama/qwen3:4b\"\n",
     "# api_base=\"http://localhost:11434\"\n",
     "\n",
-    "model_id=\"claude-3-7-sonnet-20250219\"\n",
-    "api_base=None\n",
+    "# anthorpic\n",
+    "# model_id=\"claude-3-7-sonnet-20250219\"\n",
+    "\n",
+    "#openai\n",
+    "# model_id = \"gpt-4o\"\n",
+    "\n",
+    "# google\n",
+    "model_id = \"gemini/gemini-2.0-flash-exp\"\n",
+    "# model_id = \"gemin/gemini-2.5-flash-preview-04-17\"\n",
+    "# model_id = \"gemini/gemini-2.5-pro-preview-05-06\"\n",
     "\n",
     "kwargs = {\"base_url\": \"http://localhost:5050\"}"
    ]
@@ -120,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = agent.run(\"What is the daily maximum value of PI-P0017 in April 2025?\")"
+    "result = agent.run(\"What is the daily maximum value of PI-P0016 in Febuary 2025?\")"
    ]
   },
   {
@@ -150,7 +160,7 @@
     "    \"Can you compare PI-P0017 and PI-P0016 for the first 10 days in 2025?\",\n",
     "    \"What assets are next to asset BA100?\",\n",
     "    \"Can you create a plot for the adjacent sensors of asset BA101 for 1st January 2025?\",\n",
-    "    \"What is the id of TI-T0022?\"\n",
+    "    \"What is the id of TI-T0022?\",\n",
     "    \"What is the name of asset id c831fadb-d620-4007-bdda-4593038c87f9?\",\n",
     "    \"Can you provide me the highest value for June 2025 for TI-T0022?\"\n",
     "]"
@@ -260,6 +270,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ff56c723-ba77-404e-b2bc-75873ff88b2d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e395de43-c344-4e4e-a66c-98e37d0af452",
    "metadata": {},
    "outputs": [],
    "source": []
