first running agent

--- a/notebooks/id2name.ipynb
+++ b/notebooks/id2name.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "80b90c3c-1f64-4585-ab2a-8b6d957c8cbd",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2802dea9-39c1-4c0a-a565-4abf9c984551",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "56524edd-6ca5-4394-a53b-f7a9322eb72f",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "852b531b-54c3-476e-b326-1001f0c46535",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d1da2db7-2891-4508-8278-0398cc4dbbe8",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7e39d446-8cda-4e26-8f76-580cad85792e",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "71e4fff2-2d02-4be8-8a56-840caf38db91",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "99e6d408-72c1-4e25-b6ad-f8a8e4ac21b3",
    "metadata": {},
    "outputs": [
@@ -130,19 +130,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-05-13 20:35:00.796\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m71\u001b[0m - \u001b[1mFetching data from http://localhost:5050/v1/name_from_id/c831fadb-d620-4007-bdda-4593038c87f9 with params: {'offset': 0, 'limit': 100}\u001b[0m\n",
-      "\u001b[32m2025-05-13 20:35:00.838\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m85\u001b[0m - \u001b[1mReached the last page.\u001b[0m\n",
-      "\u001b[32m2025-05-13 20:35:00.839\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m71\u001b[0m - \u001b[1mFetching data from http://localhost:5050/v1/name_from_id/52f50206-c6b9-47a4-bead-fe791f71cb7c with params: {'offset': 0, 'limit': 100}\u001b[0m\n",
-      "\u001b[32m2025-05-13 20:35:00.860\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m85\u001b[0m - \u001b[1mReached the last page.\u001b[0m\n"
+      "\u001b[32m2025-05-14 21:15:46.044\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m74\u001b[0m - \u001b[1mFetching data from None/v1/name_from_id/c831fadb-d620-4007-bdda-4593038c87f9 with params: {'offset': 0, 'limit': 100}\u001b[0m\n",
+      "\u001b[32m2025-05-14 21:15:46.097\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m100\u001b[0m - \u001b[34m\u001b[1mRequest error fetching name for None/v1/name_from_id/c831fadb-d620-4007-bdda-4593038c87f9: Request URL is missing an 'http://' or 'https://' protocol.\u001b[0m\n",
+      "\u001b[32m2025-05-14 21:15:46.098\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mforward\u001b[0m:\u001b[36m24\u001b[0m - \u001b[33m\u001b[1mNo name found for asset id c831fadb-d620-4007-bdda-4593038c87f9\u001b[0m\n",
+      "\u001b[32m2025-05-14 21:15:46.099\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m74\u001b[0m - \u001b[1mFetching data from None/v1/name_from_id/52f50206-c6b9-47a4-bead-fe791f71cb7c with params: {'offset': 0, 'limit': 100}\u001b[0m\n",
+      "\u001b[32m2025-05-14 21:15:46.115\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m100\u001b[0m - \u001b[34m\u001b[1mRequest error fetching name for None/v1/name_from_id/52f50206-c6b9-47a4-bead-fe791f71cb7c: Request URL is missing an 'http://' or 'https://' protocol.\u001b[0m\n",
+      "\u001b[32m2025-05-14 21:15:46.115\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mforward\u001b[0m:\u001b[36m24\u001b[0m - \u001b[33m\u001b[1mNo name found for asset id 52f50206-c6b9-47a4-bead-fe791f71cb7c\u001b[0m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'names': ['PA101', 'YS-Y008']}"
+       "{'names': []}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "ba0cf378-2b7c-471d-b18d-85cc13de50be",
    "metadata": {},
    "outputs": [],
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e63411c2-3fc8-4875-85f6-8da3d94b275f",
    "metadata": {},
    "outputs": [
@@ -171,20 +173,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-05-13 10:19:55.296\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mbase\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m71\u001b[0m - \u001b[1mFetching data from http://localhost:5050/v1/name_from_id/12 with params: {'offset': 0, 'limit': 100}\u001b[0m\n",
-      "\u001b[32m2025-05-13 10:19:55.335\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mbase\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m92\u001b[0m - \u001b[34m\u001b[1mHTTP error fetching name for http://localhost:5050/v1/name_from_id/12: 422 - {\"detail\":[{\"type\":\"uuid_parsing\",\"loc\":[\"path\",\"asset_id\"],\"msg\":\"Input should be a valid UUID, invalid length: expected length 32 for simple format, found 2\",\"input\":\"12\",\"ctx\":{\"error\":\"invalid length: expected length 32 for simple format, found 2\"}}]}\u001b[0m\n",
-      "\u001b[32m2025-05-13 10:19:55.336\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mforward\u001b[0m:\u001b[36m24\u001b[0m - \u001b[33m\u001b[1mNo name found for asset id 12\u001b[0m\n",
-      "\u001b[32m2025-05-13 10:19:55.336\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mbase\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m71\u001b[0m - \u001b[1mFetching data from http://localhost:5050/v1/name_from_id/c831fadb-d620-4007-bdda-4593038c87f9 with params: {'offset': 0, 'limit': 100}\u001b[0m\n",
-      "\u001b[32m2025-05-13 10:19:55.359\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mbase\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m85\u001b[0m - \u001b[1mReached the last page.\u001b[0m\n"
+      "\u001b[32m2025-05-14 21:15:58.750\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m74\u001b[0m - \u001b[1mFetching data from None/v1/name_from_id/c831fadb-d620-4007-bdda-4593038c87f9 with params: {'offset': 0, 'limit': 100}\u001b[0m\n",
+      "\u001b[32m2025-05-14 21:15:58.785\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m100\u001b[0m - \u001b[34m\u001b[1mRequest error fetching name for None/v1/name_from_id/c831fadb-d620-4007-bdda-4593038c87f9: Request URL is missing an 'http://' or 'https://' protocol.\u001b[0m\n",
+      "\u001b[32m2025-05-14 21:15:58.786\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mforward\u001b[0m:\u001b[36m24\u001b[0m - \u001b[33m\u001b[1mNo name found for asset id c831fadb-d620-4007-bdda-4593038c87f9\u001b[0m\n",
+      "\u001b[32m2025-05-14 21:15:58.786\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m74\u001b[0m - \u001b[1mFetching data from None/v1/name_from_id/12 with params: {'offset': 0, 'limit': 100}\u001b[0m\n",
+      "\u001b[32m2025-05-14 21:15:58.803\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m100\u001b[0m - \u001b[34m\u001b[1mRequest error fetching name for None/v1/name_from_id/12: Request URL is missing an 'http://' or 'https://' protocol.\u001b[0m\n",
+      "\u001b[32m2025-05-14 21:15:58.804\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mforward\u001b[0m:\u001b[36m24\u001b[0m - \u001b[33m\u001b[1mNo name found for asset id 12\u001b[0m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'names': ['PA101']}"
+       "{'names': []}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
