--- a/notebooks/name2id.ipynb
+++ b/notebooks/name2id.ipynb
@@ -92,17 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "d1da2db7-2891-4508-8278-0398cc4dbbe8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "kwargs = {\"base_url\": \"http://localhost:5050\"}"
+    "kwargs = {\"tools_api_base\": \"http://localhost:5050\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "7e39d446-8cda-4e26-8f76-580cad85792e",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "71e4fff2-2d02-4be8-8a56-840caf38db91",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "99e6d408-72c1-4e25-b6ad-f8a8e4ac21b3",
    "metadata": {},
    "outputs": [
@@ -130,10 +130,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-05-13 21:28:04.622\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m74\u001b[0m - \u001b[1mFetching data from http://localhost:5050/v1/id_from_name/TI-T0023 with params: {'offset': 0, 'limit': 100}\u001b[0m\n",
-      "\u001b[32m2025-05-13 21:28:04.645\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m88\u001b[0m - \u001b[1mReached the last page.\u001b[0m\n",
-      "\u001b[32m2025-05-13 21:28:04.645\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m74\u001b[0m - \u001b[1mFetching data from http://localhost:5050/v1/id_from_name/PA101 with params: {'offset': 0, 'limit': 100}\u001b[0m\n",
-      "\u001b[32m2025-05-13 21:28:04.667\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m88\u001b[0m - \u001b[1mReached the last page.\u001b[0m\n"
+      "\u001b[32m2025-05-14 21:17:46.827\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m74\u001b[0m - \u001b[1mFetching data from http://localhost:5050/v1/id_from_name/TI-T0023 with params: {'offset': 0, 'limit': 100}\u001b[0m\n",
+      "\u001b[32m2025-05-14 21:17:46.887\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m88\u001b[0m - \u001b[1mReached the last page.\u001b[0m\n",
+      "\u001b[32m2025-05-14 21:17:46.887\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m74\u001b[0m - \u001b[1mFetching data from http://localhost:5050/v1/id_from_name/PA101 with params: {'offset': 0, 'limit': 100}\u001b[0m\n",
+      "\u001b[32m2025-05-14 21:17:46.913\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.tools.base\u001b[0m:\u001b[36mcall_api\u001b[0m:\u001b[36m88\u001b[0m - \u001b[1mReached the last page.\u001b[0m\n"
      ]
     },
     {
@@ -143,7 +143,7 @@
        "  'c831fadb-d620-4007-bdda-4593038c87f9']}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
