fixed sql construction

--- a/notebooks/sql_adapter.ipynb
+++ b/notebooks/sql_adapter.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "6e1f9457",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "4cb998fc",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "a4858566",
    "metadata": {},
    "outputs": [],
@@ -67,21 +67,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "9f13face",
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "asyncio.run() cannot be called from a running event loop",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m result = \u001b[43mcontroller\u001b[49m\u001b[43m.\u001b[49m\u001b[43mprocess_question\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquestions\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/agentic_ai/src/agent/adapters/sql_tools/controller.py:43\u001b[39m, in \u001b[36mSQLController.process_question\u001b[39m\u001b[34m(self, question)\u001b[39m\n\u001b[32m     41\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mprocess_question\u001b[39m(\u001b[38;5;28mself\u001b[39m, question: \u001b[38;5;28mstr\u001b[39m) -> SQLGenerationResponse:\n\u001b[32m     42\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Generate SQL query from natural language question (sync version).\"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m43\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43masyncio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_process_question_async\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquestion\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/share/uv/python/cpython-3.12.8-macos-aarch64-none/lib/python3.12/asyncio/runners.py:190\u001b[39m, in \u001b[36mrun\u001b[39m\u001b[34m(main, debug, loop_factory)\u001b[39m\n\u001b[32m    161\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Execute the coroutine and return the result.\u001b[39;00m\n\u001b[32m    162\u001b[39m \n\u001b[32m    163\u001b[39m \u001b[33;03mThis function runs the passed coroutine, taking care of\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    186\u001b[39m \u001b[33;03m    asyncio.run(main())\u001b[39;00m\n\u001b[32m    187\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    188\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m events._get_running_loop() \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    189\u001b[39m     \u001b[38;5;66;03m# fail fast with short traceback\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m190\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[32m    191\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33masyncio.run() cannot be called from a running event loop\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    193\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m Runner(debug=debug, loop_factory=loop_factory) \u001b[38;5;28;01mas\u001b[39;00m runner:\n\u001b[32m    194\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m runner.run(main)\n",
-      "\u001b[31mRuntimeError\u001b[39m: asyncio.run() cannot be called from a running event loop"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-07-05 16:01:52.129\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.database\u001b[0m:\u001b[36m_get_connection\u001b[0m:\u001b[36m77\u001b[0m - \u001b[1mSQLAlchemy engine created successfully.\u001b[0m\n",
+      "\u001b[32m2025-07-05 16:01:52.130\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.database\u001b[0m:\u001b[36mconnect\u001b[0m:\u001b[36m90\u001b[0m - \u001b[1mConnected to postgres database\u001b[0m\n",
+      "\u001b[32m2025-07-05 16:01:52.350\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.database\u001b[0m:\u001b[36mdisconnect\u001b[0m:\u001b[36m101\u001b[0m - \u001b[1mDisconnected from database\u001b[0m\n",
+      "Authentication error: Langfuse client initialized without public_key. Client will be disabled. Provide a public_key parameter or set LANGFUSE_PUBLIC_KEY environment variable. \n",
+      "Authentication error: Langfuse client initialized without public_key. Client will be disabled. Provide a public_key parameter or set LANGFUSE_PUBLIC_KEY environment variable. \n",
+      "Context error: No active span in current context. Operations that depend on an active span will be skipped. Ensure spans are created with start_as_current_span() or that you're operating within an active span context.\n",
+      "Authentication error: Langfuse client initialized without public_key. Client will be disabled. Provide a public_key parameter or set LANGFUSE_PUBLIC_KEY environment variable. \n",
+      "Authentication error: Langfuse client initialized without public_key. Client will be disabled. Provide a public_key parameter or set LANGFUSE_PUBLIC_KEY environment variable. \n",
+      "Context error: No active span in current context. Operations that depend on an active span will be skipped. Ensure spans are created with start_as_current_span() or that you're operating within an active span context.\n",
+      "\u001b[32m2025-07-05 16:02:06.965\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.database\u001b[0m:\u001b[36m_get_connection\u001b[0m:\u001b[36m77\u001b[0m - \u001b[1mSQLAlchemy engine created successfully.\u001b[0m\n",
+      "\u001b[32m2025-07-05 16:02:06.967\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.database\u001b[0m:\u001b[36mconnect\u001b[0m:\u001b[36m90\u001b[0m - \u001b[1mConnected to postgres database\u001b[0m\n",
+      "\u001b[32m2025-07-05 16:02:07.043\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.database\u001b[0m:\u001b[36mdisconnect\u001b[0m:\u001b[36m101\u001b[0m - \u001b[1mDisconnected from database\u001b[0m\n",
+      "Authentication error: Langfuse client initialized without public_key. Client will be disabled. Provide a public_key parameter or set LANGFUSE_PUBLIC_KEY environment variable. \n",
+      "Authentication error: Langfuse client initialized without public_key. Client will be disabled. Provide a public_key parameter or set LANGFUSE_PUBLIC_KEY environment variable. \n",
+      "Context error: No active span in current context. Operations that depend on an active span will be skipped. Ensure spans are created with start_as_current_span() or that you're operating within an active span context.\n",
+      "Authentication error: Langfuse client initialized without public_key. Client will be disabled. Provide a public_key parameter or set LANGFUSE_PUBLIC_KEY environment variable. \n",
+      "Authentication error: Langfuse client initialized without public_key. Client will be disabled. Provide a public_key parameter or set LANGFUSE_PUBLIC_KEY environment variable. \n",
+      "Context error: No active span in current context. Operations that depend on an active span will be skipped. Ensure spans are created with start_as_current_span() or that you're operating within an active span context.\n",
+      "Authentication error: Langfuse client initialized without public_key. Client will be disabled. Provide a public_key parameter or set LANGFUSE_PUBLIC_KEY environment variable. \n",
+      "Authentication error: Langfuse client initialized without public_key. Client will be disabled. Provide a public_key parameter or set LANGFUSE_PUBLIC_KEY environment variable. \n",
+      "Context error: No active span in current context. Operations that depend on an active span will be skipped. Ensure spans are created with start_as_current_span() or that you're operating within an active span context.\n",
+      "\u001b[32m2025-07-05 16:02:22.547\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.database\u001b[0m:\u001b[36m_get_connection\u001b[0m:\u001b[36m77\u001b[0m - \u001b[1mSQLAlchemy engine created successfully.\u001b[0m\n",
+      "\u001b[32m2025-07-05 16:02:22.548\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.database\u001b[0m:\u001b[36mconnect\u001b[0m:\u001b[36m90\u001b[0m - \u001b[1mConnected to postgres database\u001b[0m\n",
+      "\u001b[32m2025-07-05 16:02:22.614\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.agent.adapters.database\u001b[0m:\u001b[36mdisconnect\u001b[0m:\u001b[36m101\u001b[0m - \u001b[1mDisconnected from database\u001b[0m\n",
+      "Authentication error: Langfuse client initialized without public_key. Client will be disabled. Provide a public_key parameter or set LANGFUSE_PUBLIC_KEY environment variable. \n",
+      "Authentication error: Langfuse client initialized without public_key. Client will be disabled. Provide a public_key parameter or set LANGFUSE_PUBLIC_KEY environment variable. \n",
+      "Context error: No active span in current context. Operations that depend on an active span will be skipped. Ensure spans are created with start_as_current_span() or that you're operating within an active span context.\n"
      ]
     }
    ],
@@ -91,20 +111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "22961266",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'coroutine' object has no attribute 'confidence'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mresult\u001b[49m\u001b[43m.\u001b[49m\u001b[43mconfidence\u001b[49m\n",
-      "\u001b[31mAttributeError\u001b[39m: 'coroutine' object has no attribute 'confidence'"
-     ]
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
